// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`exclude asset exclude all 1`] = `Array []`;

exports[`exclude asset exclude some 1`] = `
Array [
  Object {
    "compilation": "c6133ad65823403ee6df",
    "details": Array [
      Object {
        "payload": Object {
          "context": Object {
            "asyncSize": 0,
            "compilation": "c6133ad65823403ee6df",
            "entry": "one",
            "initialSize": 973,
            "rule": Object {
              "maxAsyncSize": null,
              "maxInitialSize": null,
              "maxSize": 1,
            },
            "size": 973,
            "useCompressedSize": undefined,
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              entry: #.entry.resolveEntrypoint(#.compilation),
              useCompressedSize: #.useCompressedSize,
              size: #.size,
              initialSize: #.initialSize,
              asyncSize: #.asyncSize,
              rule: #.rule,
            }
            ",
        "type": "discovery",
      },
    ],
    "filename": "input.json",
    "message": "Entry \\"one\\": Download size of assets is 0.95 kb. It's over the 0.00 kb limit",
    "related": Array [
      Object {
        "id": "one",
        "type": "entry",
      },
    ],
  },
  Object {
    "compilation": "c6133ad65823403ee6df",
    "details": Array [
      Object {
        "payload": Object {
          "context": Object {
            "asyncSize": 134,
            "compilation": "c6133ad65823403ee6df",
            "entry": "two",
            "initialSize": 8958,
            "rule": Object {
              "maxAsyncSize": null,
              "maxInitialSize": null,
              "maxSize": 1,
            },
            "size": 9092,
            "useCompressedSize": undefined,
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              entry: #.entry.resolveEntrypoint(#.compilation),
              useCompressedSize: #.useCompressedSize,
              size: #.size,
              initialSize: #.initialSize,
              asyncSize: #.asyncSize,
              rule: #.rule,
            }
            ",
        "type": "discovery",
      },
    ],
    "filename": "input.json",
    "message": "Entry \\"two\\": Download size of assets is 8.88 kb. It's over the 0.00 kb limit",
    "related": Array [
      Object {
        "id": "two",
        "type": "entry",
      },
    ],
  },
]
`;

exports[`exclude entry object 1`] = `
Array [
  Object {
    "compilation": "c6133ad65823403ee6df",
    "details": Array [
      Object {
        "payload": Object {
          "context": Object {
            "asyncSize": 0,
            "compilation": "c6133ad65823403ee6df",
            "entry": "one",
            "initialSize": 973,
            "rule": Object {
              "maxAsyncSize": null,
              "maxInitialSize": null,
              "maxSize": 1,
            },
            "size": 973,
            "useCompressedSize": undefined,
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              entry: #.entry.resolveEntrypoint(#.compilation),
              useCompressedSize: #.useCompressedSize,
              size: #.size,
              initialSize: #.initialSize,
              asyncSize: #.asyncSize,
              rule: #.rule,
            }
            ",
        "type": "discovery",
      },
    ],
    "filename": "input.json",
    "message": "Entry \\"one\\": Download size of assets is 0.95 kb. It's over the 0.00 kb limit",
    "related": Array [
      Object {
        "id": "one",
        "type": "entry",
      },
    ],
  },
]
`;

exports[`exclude entry regexp 1`] = `
Array [
  Object {
    "compilation": "c6133ad65823403ee6df",
    "details": Array [
      Object {
        "payload": Object {
          "context": Object {
            "asyncSize": 0,
            "compilation": "c6133ad65823403ee6df",
            "entry": "one",
            "initialSize": 973,
            "rule": Object {
              "maxAsyncSize": null,
              "maxInitialSize": null,
              "maxSize": 1,
            },
            "size": 973,
            "useCompressedSize": undefined,
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              entry: #.entry.resolveEntrypoint(#.compilation),
              useCompressedSize: #.useCompressedSize,
              size: #.size,
              initialSize: #.initialSize,
              asyncSize: #.asyncSize,
              rule: #.rule,
            }
            ",
        "type": "discovery",
      },
    ],
    "filename": "input.json",
    "message": "Entry \\"one\\": Download size of assets is 0.95 kb. It's over the 0.00 kb limit",
    "related": Array [
      Object {
        "id": "one",
        "type": "entry",
      },
    ],
  },
]
`;

exports[`exclude entry string 1`] = `
Array [
  Object {
    "compilation": "c6133ad65823403ee6df",
    "details": Array [
      Object {
        "payload": Object {
          "context": Object {
            "asyncSize": 0,
            "compilation": "c6133ad65823403ee6df",
            "entry": "one",
            "initialSize": 973,
            "rule": Object {
              "maxAsyncSize": null,
              "maxInitialSize": null,
              "maxSize": 1,
            },
            "size": 973,
            "useCompressedSize": undefined,
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              entry: #.entry.resolveEntrypoint(#.compilation),
              useCompressedSize: #.useCompressedSize,
              size: #.size,
              initialSize: #.initialSize,
              asyncSize: #.asyncSize,
              rule: #.rule,
            }
            ",
        "type": "discovery",
      },
    ],
    "filename": "input.json",
    "message": "Entry \\"one\\": Download size of assets is 0.95 kb. It's over the 0.00 kb limit",
    "related": Array [
      Object {
        "id": "one",
        "type": "entry",
      },
    ],
  },
]
`;

exports[`exclude no exclude 1`] = `
Array [
  Object {
    "compilation": "c6133ad65823403ee6df",
    "details": Array [
      Object {
        "payload": Object {
          "context": Object {
            "asyncSize": 0,
            "compilation": "c6133ad65823403ee6df",
            "entry": "one",
            "initialSize": 973,
            "rule": Object {
              "maxAsyncSize": null,
              "maxInitialSize": null,
              "maxSize": 1,
            },
            "size": 973,
            "useCompressedSize": undefined,
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              entry: #.entry.resolveEntrypoint(#.compilation),
              useCompressedSize: #.useCompressedSize,
              size: #.size,
              initialSize: #.initialSize,
              asyncSize: #.asyncSize,
              rule: #.rule,
            }
            ",
        "type": "discovery",
      },
    ],
    "filename": "input.json",
    "message": "Entry \\"one\\": Download size of assets is 0.95 kb. It's over the 0.00 kb limit",
    "related": Array [
      Object {
        "id": "one",
        "type": "entry",
      },
    ],
  },
  Object {
    "compilation": "c6133ad65823403ee6df",
    "details": Array [
      Object {
        "payload": Object {
          "context": Object {
            "asyncSize": 134,
            "compilation": "c6133ad65823403ee6df",
            "entry": "two",
            "initialSize": 8958,
            "rule": Object {
              "maxAsyncSize": null,
              "maxInitialSize": null,
              "maxSize": 1,
            },
            "size": 9092,
            "useCompressedSize": undefined,
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              entry: #.entry.resolveEntrypoint(#.compilation),
              useCompressedSize: #.useCompressedSize,
              size: #.size,
              initialSize: #.initialSize,
              asyncSize: #.asyncSize,
              rule: #.rule,
            }
            ",
        "type": "discovery",
      },
    ],
    "filename": "input.json",
    "message": "Entry \\"two\\": Download size of assets is 8.88 kb. It's over the 0.00 kb limit",
    "related": Array [
      Object {
        "id": "two",
        "type": "entry",
      },
    ],
  },
]
`;

exports[`maxAsyncSize global 1`] = `
Array [
  Object {
    "compilation": "c6133ad65823403ee6df",
    "details": Array [
      Object {
        "payload": Object {
          "context": Object {
            "asyncSize": 134,
            "compilation": "c6133ad65823403ee6df",
            "entry": "two",
            "initialSize": 8958,
            "rule": Object {
              "maxAsyncSize": 100,
              "maxInitialSize": null,
              "maxSize": null,
            },
            "size": 9092,
            "useCompressedSize": undefined,
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              entry: #.entry.resolveEntrypoint(#.compilation),
              useCompressedSize: #.useCompressedSize,
              size: #.size,
              initialSize: #.initialSize,
              asyncSize: #.asyncSize,
              rule: #.rule,
            }
            ",
        "type": "discovery",
      },
    ],
    "filename": "input.json",
    "message": "Entry \\"two\\": Download size of async assets is 0.13 kb. It's over the 0.10 kb limit",
    "related": Array [
      Object {
        "id": "two",
        "type": "entry",
      },
    ],
  },
]
`;

exports[`maxAsyncSize not match - global 1`] = `Array []`;

exports[`maxAsyncSize not match - override global 1`] = `Array []`;

exports[`maxAsyncSize override global 1`] = `
Array [
  Object {
    "compilation": "c6133ad65823403ee6df",
    "details": Array [
      Object {
        "payload": Object {
          "context": Object {
            "asyncSize": 134,
            "compilation": "c6133ad65823403ee6df",
            "entry": "two",
            "initialSize": 8958,
            "rule": Object {
              "maxAsyncSize": 100,
              "maxInitialSize": null,
              "maxSize": null,
            },
            "size": 9092,
            "useCompressedSize": undefined,
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              entry: #.entry.resolveEntrypoint(#.compilation),
              useCompressedSize: #.useCompressedSize,
              size: #.size,
              initialSize: #.initialSize,
              asyncSize: #.asyncSize,
              rule: #.rule,
            }
            ",
        "type": "discovery",
      },
    ],
    "filename": "input.json",
    "message": "Entry \\"two\\": Download size of async assets is 0.13 kb. It's over the 0.10 kb limit",
    "related": Array [
      Object {
        "id": "two",
        "type": "entry",
      },
    ],
  },
]
`;

exports[`maxAsyncSize with useCompressedSize = false 1`] = `
Array [
  Object {
    "compilation": "c6133ad65823403ee6df",
    "details": Array [
      Object {
        "payload": Object {
          "context": Object {
            "asyncSize": 142,
            "compilation": "c6133ad65823403ee6df",
            "entry": "two",
            "initialSize": 12704,
            "rule": Object {
              "maxAsyncSize": 100,
              "maxInitialSize": null,
              "maxSize": null,
            },
            "size": 12846,
            "useCompressedSize": false,
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              entry: #.entry.resolveEntrypoint(#.compilation),
              useCompressedSize: #.useCompressedSize,
              size: #.size,
              initialSize: #.initialSize,
              asyncSize: #.asyncSize,
              rule: #.rule,
            }
            ",
        "type": "discovery",
      },
    ],
    "filename": "input.json",
    "message": "Entry \\"two\\": Download size of async assets is 0.14 kb. It's over the 0.10 kb limit",
    "related": Array [
      Object {
        "id": "two",
        "type": "entry",
      },
    ],
  },
]
`;

exports[`maxInitialSize global 1`] = `
Array [
  Object {
    "compilation": "c6133ad65823403ee6df",
    "details": Array [
      Object {
        "payload": Object {
          "context": Object {
            "asyncSize": 0,
            "compilation": "c6133ad65823403ee6df",
            "entry": "one",
            "initialSize": 973,
            "rule": Object {
              "maxAsyncSize": null,
              "maxInitialSize": 100,
              "maxSize": null,
            },
            "size": 973,
            "useCompressedSize": undefined,
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              entry: #.entry.resolveEntrypoint(#.compilation),
              useCompressedSize: #.useCompressedSize,
              size: #.size,
              initialSize: #.initialSize,
              asyncSize: #.asyncSize,
              rule: #.rule,
            }
            ",
        "type": "discovery",
      },
    ],
    "filename": "input.json",
    "message": "Entry \\"one\\": Download size of initial assets is 0.95 kb. It's over the 0.10 kb limit",
    "related": Array [
      Object {
        "id": "one",
        "type": "entry",
      },
    ],
  },
  Object {
    "compilation": "c6133ad65823403ee6df",
    "details": Array [
      Object {
        "payload": Object {
          "context": Object {
            "asyncSize": 134,
            "compilation": "c6133ad65823403ee6df",
            "entry": "two",
            "initialSize": 8958,
            "rule": Object {
              "maxAsyncSize": null,
              "maxInitialSize": 100,
              "maxSize": null,
            },
            "size": 9092,
            "useCompressedSize": undefined,
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              entry: #.entry.resolveEntrypoint(#.compilation),
              useCompressedSize: #.useCompressedSize,
              size: #.size,
              initialSize: #.initialSize,
              asyncSize: #.asyncSize,
              rule: #.rule,
            }
            ",
        "type": "discovery",
      },
    ],
    "filename": "input.json",
    "message": "Entry \\"two\\": Download size of initial assets is 8.75 kb. It's over the 0.10 kb limit",
    "related": Array [
      Object {
        "id": "two",
        "type": "entry",
      },
    ],
  },
]
`;

exports[`maxInitialSize not match - global 1`] = `Array []`;

exports[`maxInitialSize not match - override global 1`] = `Array []`;

exports[`maxInitialSize override global 1`] = `
Array [
  Object {
    "compilation": "c6133ad65823403ee6df",
    "details": Array [
      Object {
        "payload": Object {
          "context": Object {
            "asyncSize": 0,
            "compilation": "c6133ad65823403ee6df",
            "entry": "one",
            "initialSize": 973,
            "rule": Object {
              "maxAsyncSize": null,
              "maxInitialSize": 100,
              "maxSize": null,
            },
            "size": 973,
            "useCompressedSize": undefined,
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              entry: #.entry.resolveEntrypoint(#.compilation),
              useCompressedSize: #.useCompressedSize,
              size: #.size,
              initialSize: #.initialSize,
              asyncSize: #.asyncSize,
              rule: #.rule,
            }
            ",
        "type": "discovery",
      },
    ],
    "filename": "input.json",
    "message": "Entry \\"one\\": Download size of initial assets is 0.95 kb. It's over the 0.10 kb limit",
    "related": Array [
      Object {
        "id": "one",
        "type": "entry",
      },
    ],
  },
  Object {
    "compilation": "c6133ad65823403ee6df",
    "details": Array [
      Object {
        "payload": Object {
          "context": Object {
            "asyncSize": 134,
            "compilation": "c6133ad65823403ee6df",
            "entry": "two",
            "initialSize": 8958,
            "rule": Object {
              "maxAsyncSize": null,
              "maxInitialSize": 100,
              "maxSize": null,
            },
            "size": 9092,
            "useCompressedSize": undefined,
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              entry: #.entry.resolveEntrypoint(#.compilation),
              useCompressedSize: #.useCompressedSize,
              size: #.size,
              initialSize: #.initialSize,
              asyncSize: #.asyncSize,
              rule: #.rule,
            }
            ",
        "type": "discovery",
      },
    ],
    "filename": "input.json",
    "message": "Entry \\"two\\": Download size of initial assets is 8.75 kb. It's over the 0.10 kb limit",
    "related": Array [
      Object {
        "id": "two",
        "type": "entry",
      },
    ],
  },
]
`;

exports[`maxInitialSize with useCompressedSize = false 1`] = `
Array [
  Object {
    "compilation": "c6133ad65823403ee6df",
    "details": Array [
      Object {
        "payload": Object {
          "context": Object {
            "asyncSize": 0,
            "compilation": "c6133ad65823403ee6df",
            "entry": "one",
            "initialSize": 1612,
            "rule": Object {
              "maxAsyncSize": null,
              "maxInitialSize": 100,
              "maxSize": null,
            },
            "size": 1612,
            "useCompressedSize": false,
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              entry: #.entry.resolveEntrypoint(#.compilation),
              useCompressedSize: #.useCompressedSize,
              size: #.size,
              initialSize: #.initialSize,
              asyncSize: #.asyncSize,
              rule: #.rule,
            }
            ",
        "type": "discovery",
      },
    ],
    "filename": "input.json",
    "message": "Entry \\"one\\": Download size of initial assets is 1.57 kb. It's over the 0.10 kb limit",
    "related": Array [
      Object {
        "id": "one",
        "type": "entry",
      },
    ],
  },
  Object {
    "compilation": "c6133ad65823403ee6df",
    "details": Array [
      Object {
        "payload": Object {
          "context": Object {
            "asyncSize": 142,
            "compilation": "c6133ad65823403ee6df",
            "entry": "two",
            "initialSize": 12704,
            "rule": Object {
              "maxAsyncSize": null,
              "maxInitialSize": 100,
              "maxSize": null,
            },
            "size": 12846,
            "useCompressedSize": false,
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              entry: #.entry.resolveEntrypoint(#.compilation),
              useCompressedSize: #.useCompressedSize,
              size: #.size,
              initialSize: #.initialSize,
              asyncSize: #.asyncSize,
              rule: #.rule,
            }
            ",
        "type": "discovery",
      },
    ],
    "filename": "input.json",
    "message": "Entry \\"two\\": Download size of initial assets is 12.41 kb. It's over the 0.10 kb limit",
    "related": Array [
      Object {
        "id": "two",
        "type": "entry",
      },
    ],
  },
]
`;

exports[`maxSize global 1`] = `
Array [
  Object {
    "compilation": "c6133ad65823403ee6df",
    "details": Array [
      Object {
        "payload": Object {
          "context": Object {
            "asyncSize": 0,
            "compilation": "c6133ad65823403ee6df",
            "entry": "one",
            "initialSize": 973,
            "rule": Object {
              "maxAsyncSize": null,
              "maxInitialSize": null,
              "maxSize": 100,
            },
            "size": 973,
            "useCompressedSize": undefined,
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              entry: #.entry.resolveEntrypoint(#.compilation),
              useCompressedSize: #.useCompressedSize,
              size: #.size,
              initialSize: #.initialSize,
              asyncSize: #.asyncSize,
              rule: #.rule,
            }
            ",
        "type": "discovery",
      },
    ],
    "filename": "input.json",
    "message": "Entry \\"one\\": Download size of assets is 0.95 kb. It's over the 0.10 kb limit",
    "related": Array [
      Object {
        "id": "one",
        "type": "entry",
      },
    ],
  },
  Object {
    "compilation": "c6133ad65823403ee6df",
    "details": Array [
      Object {
        "payload": Object {
          "context": Object {
            "asyncSize": 134,
            "compilation": "c6133ad65823403ee6df",
            "entry": "two",
            "initialSize": 8958,
            "rule": Object {
              "maxAsyncSize": null,
              "maxInitialSize": null,
              "maxSize": 100,
            },
            "size": 9092,
            "useCompressedSize": undefined,
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              entry: #.entry.resolveEntrypoint(#.compilation),
              useCompressedSize: #.useCompressedSize,
              size: #.size,
              initialSize: #.initialSize,
              asyncSize: #.asyncSize,
              rule: #.rule,
            }
            ",
        "type": "discovery",
      },
    ],
    "filename": "input.json",
    "message": "Entry \\"two\\": Download size of assets is 8.88 kb. It's over the 0.10 kb limit",
    "related": Array [
      Object {
        "id": "two",
        "type": "entry",
      },
    ],
  },
]
`;

exports[`maxSize not match - global 1`] = `Array []`;

exports[`maxSize not match - override global 1`] = `Array []`;

exports[`maxSize override global 1`] = `
Array [
  Object {
    "compilation": "c6133ad65823403ee6df",
    "details": Array [
      Object {
        "payload": Object {
          "context": Object {
            "asyncSize": 0,
            "compilation": "c6133ad65823403ee6df",
            "entry": "one",
            "initialSize": 973,
            "rule": Object {
              "maxAsyncSize": null,
              "maxInitialSize": null,
              "maxSize": 100,
            },
            "size": 973,
            "useCompressedSize": undefined,
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              entry: #.entry.resolveEntrypoint(#.compilation),
              useCompressedSize: #.useCompressedSize,
              size: #.size,
              initialSize: #.initialSize,
              asyncSize: #.asyncSize,
              rule: #.rule,
            }
            ",
        "type": "discovery",
      },
    ],
    "filename": "input.json",
    "message": "Entry \\"one\\": Download size of assets is 0.95 kb. It's over the 0.10 kb limit",
    "related": Array [
      Object {
        "id": "one",
        "type": "entry",
      },
    ],
  },
  Object {
    "compilation": "c6133ad65823403ee6df",
    "details": Array [
      Object {
        "payload": Object {
          "context": Object {
            "asyncSize": 134,
            "compilation": "c6133ad65823403ee6df",
            "entry": "two",
            "initialSize": 8958,
            "rule": Object {
              "maxAsyncSize": null,
              "maxInitialSize": null,
              "maxSize": 100,
            },
            "size": 9092,
            "useCompressedSize": undefined,
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              entry: #.entry.resolveEntrypoint(#.compilation),
              useCompressedSize: #.useCompressedSize,
              size: #.size,
              initialSize: #.initialSize,
              asyncSize: #.asyncSize,
              rule: #.rule,
            }
            ",
        "type": "discovery",
      },
    ],
    "filename": "input.json",
    "message": "Entry \\"two\\": Download size of assets is 8.88 kb. It's over the 0.10 kb limit",
    "related": Array [
      Object {
        "id": "two",
        "type": "entry",
      },
    ],
  },
]
`;

exports[`maxSize with useCompressedSize = false 1`] = `
Array [
  Object {
    "compilation": "c6133ad65823403ee6df",
    "details": Array [
      Object {
        "payload": Object {
          "context": Object {
            "asyncSize": 0,
            "compilation": "c6133ad65823403ee6df",
            "entry": "one",
            "initialSize": 1612,
            "rule": Object {
              "maxAsyncSize": null,
              "maxInitialSize": null,
              "maxSize": 100,
            },
            "size": 1612,
            "useCompressedSize": false,
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              entry: #.entry.resolveEntrypoint(#.compilation),
              useCompressedSize: #.useCompressedSize,
              size: #.size,
              initialSize: #.initialSize,
              asyncSize: #.asyncSize,
              rule: #.rule,
            }
            ",
        "type": "discovery",
      },
    ],
    "filename": "input.json",
    "message": "Entry \\"one\\": Download size of assets is 1.57 kb. It's over the 0.10 kb limit",
    "related": Array [
      Object {
        "id": "one",
        "type": "entry",
      },
    ],
  },
  Object {
    "compilation": "c6133ad65823403ee6df",
    "details": Array [
      Object {
        "payload": Object {
          "context": Object {
            "asyncSize": 142,
            "compilation": "c6133ad65823403ee6df",
            "entry": "two",
            "initialSize": 12704,
            "rule": Object {
              "maxAsyncSize": null,
              "maxInitialSize": null,
              "maxSize": 100,
            },
            "size": 12846,
            "useCompressedSize": false,
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              entry: #.entry.resolveEntrypoint(#.compilation),
              useCompressedSize: #.useCompressedSize,
              size: #.size,
              initialSize: #.initialSize,
              asyncSize: #.asyncSize,
              rule: #.rule,
            }
            ",
        "type": "discovery",
      },
    ],
    "filename": "input.json",
    "message": "Entry \\"two\\": Download size of assets is 12.54 kb. It's over the 0.10 kb limit",
    "related": Array [
      Object {
        "id": "two",
        "type": "entry",
      },
    ],
  },
]
`;
